--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!DOCTYPE html><html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -97,6 +96,14 @@
       margin-top: 10px;
       color: green;
     }
+    .confirmation-message {
+      display: none;
+      text-align: center;
+      color: green;
+      font-weight: bold;
+      font-size: 18px;
+      margin-top: 20px;
+    }
     footer {
       background-color: #000;
       color: white;
@@ -112,181 +119,63 @@
 <body>
   <header>
     <img src="ouassvtc.png" alt="Logo OuassVTC" />
-  </header>
-
-  <div class="container">
-    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-<div class="info">
+  </header>  <div class="container">
+    <img src="voiture.png" alt="Voiture VTC" class="car-image" /><div class="info">
   <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
-  <p>
-    OuassVTC vous propose un service de transport privé à Perpignan et ses environs. Nos chauffeurs professionnels, expérimentés et discrets sont à votre disposition 7j/7 pour assurer tous vos déplacements dans les meilleures conditions de ponctualité, de sécurité et de confort.
-  </p>
-  <p>
-    Que ce soit pour un trajet personnel, professionnel, ou pour vos transferts vers la gare ou l’aéroport, nous mettons un point d’honneur à vous offrir une prestation fiable, rapide et de qualité.
-  </p>
-  <p>
-    Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.
-  </p>
+  <p>OuassVTC vous propose un service de transport privé à Perpignan et ses environs. Nos chauffeurs professionnels, expérimentés et discrets sont à votre disposition 7j/7 pour assurer tous vos déplacements dans les meilleures conditions de ponctualité, de sécurité et de confort.</p>
+  <p>Que ce soit pour un trajet personnel, professionnel, ou pour vos transferts vers la gare ou l’aéroport, nous mettons un point d’honneur à vous offrir une prestation fiable, rapide et de qualité.</p>
+  <p>Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.</p>
 </div>
-    <div class="info">
+
 <div style="max-width: 400px; margin: 40px auto; font-weight: bold; font-size: 18px;">
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span>
-    <span>rganiser vos trajets</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span>
-    <span>tile pour tous vos déplacements</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span>
-    <span>gile et ponctuel</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
-    <span>écurité garantie</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
-    <span>ervice de qualité</span>
-  </div>
+  <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span><span>rganiser vos trajets</span></div>
+  <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span><span>tile pour tous vos déplacements</span></div>
+  <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span><span>gile et ponctuel</span></div>
+  <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span><span>écurité garantie</span></div>
+  <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span><span>ervice de qualité</span></div>
 </div>
-    <div class="buttons">
-      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
-      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
-    </div>
 
-    <div class="info">
-      <h2>Formulaire de réservation</h2>
-      <p>Tarif fixe à l'avance – pas de surprise !</p>
-    </div>
+<div class="buttons">
+  <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
+  <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+  <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
+  <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
+  <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
+</div>
 
-    <form onsubmit="sendEmail(event)">
-      <input type="text" id="nom" name="nom" placeholder="Nom" required />
-      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <div class="field-container">
-        <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-        <button type="button" class="localiser-btn" onclick="localiserDepart()">
-          <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
-        </button>
-      </div>
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
-      <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-      <div class="estimation" id="prixEstime"></div>
-      <button type="submit">Envoyer la demande</button>
-    </form>
+<div class="info">
+  <h2>Formulaire de réservation</h2>
+  <p>Tarif fixe à l'avance – pas de surprise !</p>
+</div>
 
-    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+<form id="reservationForm" onsubmit="sendEmail(event)">
+  <input type="text" id="nom" name="nom" placeholder="Nom" required />
+  <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
+  <div class="field-container">
+    <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+    <button type="button" class="localiser-btn" onclick="localiserDepart()">
+      <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
+    </button>
   </div>
+  <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+  <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
+  <input type="datetime-local" id="dateheure" name="dateheure" required />
+  <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+  <div class="estimation" id="prixEstime"></div>
+  <button type="submit">Envoyer la demande</button>
+</form>
 
-  <footer>
-    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
-    <br/><br/>
+<div class="confirmation-message" id="confirmationMessage">
+  ✅ Merci ! Votre demande a bien été envoyée. Nous vous contacterons rapidement.
+</div>
+
+<div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+
+  </div>  <footer>
+    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.<br/><br/>
     Pour toute demande : <a href="mailto:contact@ouassvtc.fr" style="color:#0af;">contact@ouassvtc.fr</a>
-  </footer>
-
-  <div class="hidden-keywords">
+  </footer>  <div class="hidden-keywords">
     Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
   </div>
-
-  <script>
-    emailjs.init("U08QGWWRUenJDOllc");
-
-    function sendEmail(event) {
-      event.preventDefault();
-      const nom = document.getElementById("nom").value;
-      const telephone = document.getElementById("telephone").value;
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      const dateheure = document.getElementById("dateheure").value;
-      const passagers = document.getElementById("passagers").value;
-      const message = document.getElementById("message").value;
-      const prixText = document.getElementById("prixEstime").innerText;
-
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-        nom,
-        telephone,
-        depart,
-        arrivee,
-        dateheure,
-        passagers,
-        message,
-        prix: prixText
-      }).then(() => {
-        // Cacher le formulaire et afficher un message de confirmation
-        document.querySelector("form").style.display = "none";
-        const confirmation = document.createElement("div");
-        confirmation.style.textAlign = "center";
-        confirmation.style.marginTop = "20px";
-        confirmation.style.fontWeight = "bold";
-        confirmation.style.color = "green";
-        confirmation.innerText = "✅ Merci ! Votre demande a bien été envoyée. Nous vous contacterons rapidement.";
-        document.querySelector(".container").appendChild(confirmation);
-      }).catch(() => {
-        alert("Erreur lors de l'envoi. Veuillez réessayer.");
-      });
-    }
-
-    function localiserDepart() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(position => {
-          const lat = position.coords.latitude;
-          const lon = position.coords.longitude;
-          fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
-            .then(res => res.json())
-            .then(data => {
-              document.getElementById("depart").value = data.display_name || "";
-              calculerEstimation();
-            });
-        });
-      } else {
-        alert("La géolocalisation n'est pas supportée par votre navigateur.");
-      }
-    }
-
-    function calculerEstimation() {
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      if (depart && arrivee) {
-        fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(depart)}&format=json&limit=1`)
-          .then(res => res.json())
-          .then(data1 => {
-            if (!data1.length) throw "Adresse de départ non trouvée";
-            const start = `${data1[0].lon},${data1[0].lat}`;
-            return fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(arrivee)}&format=json&limit=1`)
-              .then(res => res.json())
-              .then(data2 => {
-                if (!data2.length) throw "Adresse d'arrivée non trouvée";
-                const end = `${data2[0].lon},${data2[0].lat}`;
-                return fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
-                  .then(res => res.json())
-                  .then(route => {
-                    const distKm = route.routes[0].distance / 1000;
-                    let prix = 20;
-                    if (distKm > 7) prix += (distKm - 7) * 1.6;
-                    document.getElementById("prixEstime").innerText =
-                      `Distance estimée : ${distKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-                  });
-              });
-          })
-          .catch(() => {
-            document.getElementById("prixEstime").innerText = "Estimation indisponible.";
-          });
-      }
-    }
-
-    document.getElementById("depart").addEventListener("blur", calculerEstimation);
-    document.getElementById("arrivee").addEventListener("blur", calculerEstimation);
-
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
-    }
-  </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
