--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     }
     header img {
       height: 140px;
+      max-width: 100%;
     }
     .container {
       padding: 20px;
@@ -70,6 +71,7 @@
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
+      width: 100%;
     }
     .localiser-btn {
       position: absolute;
@@ -107,81 +109,93 @@
     .hidden-keywords {
       display: none;
     }
+    @media (max-width: 600px) {
+      .buttons {
+        flex-direction: column;
+        align-items: center;
+      }
+      .buttons a {
+        width: 80%;
+        justify-content: center;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
     <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
-
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-<div class="info">
-  <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
-  <p>
-    OuassVTC vous propose un service de transport privé à Perpignan et ses environs. Nos chauffeurs professionnels, expérimentés et discrets sont à votre disposition 7j/7 pour assurer tous vos déplacements dans les meilleures conditions de ponctualité, de sécurité et de confort.
-  </p>
-  <p>
-    Que ce soit pour un trajet personnel, professionnel, ou pour vos transferts vers la gare ou l’aéroport, nous mettons un point d’honneur à vous offrir une prestation fiable, rapide et de qualité.
-  </p>
-  <p>
-    Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.
-  </p>
-</div>
     <div class="info">
-<div style="max-width: 400px; margin: 40px auto; font-weight: bold; font-size: 18px;">
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span>
-    <span>rganiser vos trajets</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span>
-    <span>tile pour tous vos déplacements</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span>
-    <span>gile et ponctuel</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
-    <span>écurité garantie</span>
-  </div>
-  <div style="display: flex; align-items: baseline;">
-    <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
-    <span>ervice de qualité</span>
-  </div>
-</div>
-    <div class="buttons">
-      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
-      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
+      <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
+      <p>
+        OuassVTC vous propose un service de transport privé à Perpignan et ses environs. Nos chauffeurs professionnels, expérimentés et discrets sont à votre disposition 7j/7 pour assurer tous vos déplacements dans les meilleures conditions de ponctualité, de sécurité et de confort.
+      </p>
+      <p>
+        Que ce soit pour un trajet personnel, professionnel, ou pour vos transferts vers la gare ou l’aéroport, nous mettons un point d’honneur à vous offrir une prestation fiable, rapide et de qualité.
+      </p>
+      <p>
+        Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.
+      </p>
     </div>
 
     <div class="info">
-      <h2>Formulaire de réservation</h2>
-      <p>Tarif fixe à l'avance – pas de surprise !</p>
-    </div>
-
-    <form onsubmit="sendEmail(event)">
-      <input type="text" id="nom" name="nom" placeholder="Nom" required />
-      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <div class="field-container">
-        <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-        <button type="button" class="localiser-btn" onclick="localiserDepart()">
-          <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
-        </button>
+      <div style="max-width: 400px; margin: 40px auto; font-weight: bold; font-size: 18px;">
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span>
+          <span>rganiser vos trajets</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span>
+          <span>tile pour tous vos déplacements</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span>
+          <span>gile et ponctuel</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
+          <span>écurité garantie</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
+          <span>ervice de qualité</span>
+        </div>
       </div>
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
-      <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-      <div class="estimation" id="prixEstime"></div>
-      <button type="submit">Envoyer la demande</button>
-    </form>
 
-    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+      <div class="buttons">
+        <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
+        <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+        <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
+        <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
+        <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
+      </div>
+
+      <div class="info">
+        <h2>Formulaire de réservation</h2>
+        <p>Tarif fixe à l'avance – pas de surprise !</p>
+      </div>
+
+      <form onsubmit="sendEmail(event)">
+        <input type="text" id="nom" name="nom" placeholder="Nom" required />
+        <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
+        <div class="field-container">
+          <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+          <button type="button" class="localiser-btn" onclick="localiserDepart()">
+            <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
+          </button>
+        </div>
+        <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+        <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
+        <input type="datetime-local" id="dateheure" name="dateheure" required />
+        <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+        <div class="estimation" id="prixEstime"></div>
+        <button type="submit">Envoyer la demande</button>
+      </form>
+
+      <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+    </div>
   </div>
 
   <footer>
@@ -199,6 +213,10 @@
 
     function sendEmail(event) {
       event.preventDefault();
+      const submitButton = document.querySelector("form button[type='submit']");
+      submitButton.disabled = true;
+      submitButton.innerText = "Envoi en cours...";
+
       const nom = document.getElementById("nom").value;
       const telephone = document.getElementById("telephone").value;
       const depart = document.getElementById("depart").value;
@@ -209,25 +227,46 @@
       const prixText = document.getElementById("prixEstime").innerText;
 
       emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-        nom,
-        telephone,
-        depart,
-        arrivee,
-        dateheure,
-        passagers,
-        message,
-        prix: prixText
+        nom, telephone, depart, arrivee, dateheure, passagers, message, prix: prixText
       }).then(() => {
-        // Cacher le formulaire et afficher un message de confirmation
-        document.querySelector("form").style.display = "none";
+        const form = document.querySelector("form");
+        form.style.display = "none";
+
         const confirmation = document.createElement("div");
         confirmation.style.textAlign = "center";
         confirmation.style.marginTop = "20px";
         confirmation.style.fontWeight = "bold";
         confirmation.style.color = "green";
+        confirmation.style.opacity = 0;
+        confirmation.style.transition = "opacity 0.8s ease-in-out";
         confirmation.innerText = "✅ Merci ! Votre demande a bien été envoyée. Nous vous contacterons rapidement.";
+
+        const resetBtn = document.createElement("button");
+        resetBtn.innerText = "Faire une nouvelle demande";
+        resetBtn.style.marginTop = "20px";
+        resetBtn.style.padding = "10px 20px";
+        resetBtn.style.border = "none";
+        resetBtn.style.borderRadius = "5px";
+        resetBtn.style.backgroundColor = "#28a745";
+        resetBtn.style.color = "white";
+        resetBtn.style.cursor = "pointer";
+        resetBtn.onclick = () => {
+          form.reset();
+          document.getElementById("prixEstime").innerText = "";
+          form.style.display = "flex";
+          confirmation.remove();
+          resetBtn.remove();
+          submitButton.disabled = false;
+          submitButton.innerText = "Envoyer la demande";
+        };
+
         document.querySelector(".container").appendChild(confirmation);
+        document.querySelector(".container").appendChild(resetBtn);
+
+        setTimeout(() => { confirmation.style.opacity = 1; }, 100);
       }).catch(() => {
+        submitButton.disabled = false;
+        submitButton.innerText = "Envoyer la demande";
         alert("Erreur lors de l'envoi. Veuillez réessayer.");
       });
     }
