--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr"><!-- Google Analytics -->
+<html lang="fr">
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-494195405"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
