--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-494195405"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-23LLHRH2QL"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-494195405');
+  gtag('config', 'G-23LLHRH2QL');
 </script>
 <head> 
   <meta charset="UTF-8" />
