--- a/index.html
+++ b/index.html
@@ -23,14 +23,152 @@
     <a href="contact.html">Contact</a>
   </nav>
   <header>
-    <h1>Bienvenue chez OuassVTC</h1>
-    <p>Votre service de transport privé à Perpignan</p>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>OuassVTC - Réservation VTC à Perpignan</title>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #000;
+      padding: 20px;
+      text-align: center;
+    }
+    header img {
+      height: 120px;
+    }
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .car-image {
+      width: 100%;
+      max-width: 600px;
+      display: block;
+      margin: 0 auto 20px auto;
+    }
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .buttons a {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      background-color: #333;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 500px;
+      margin: 20px auto;
+    }
+    input, textarea {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      padding: 10px;
+      background-color: #007bff;
+      color: white;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    footer {
+      background-color: #000;
+      color: white;
+      text-align: center;
+      padding: 30px 10px;
+      margin-top: 40px;
+    }
+    .hidden-keywords {
+      display: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
-  <section>
-    <p>Réservez votre course en toute simplicité, avec un chauffeur professionnel et ponctuel.</p>
-  </section>
+
+  <div class="container">
+    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
+
+    <div class="buttons">
+      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/24/phone.png"/> Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/24/whatsapp.png"/> WhatsApp</a>
+      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/24/sms.png"/> SMS</a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/24/facebook-new.png"/> Facebook</a>
+      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/24/snapchat.png"/> Snapchat</a>
+    </div>
+
+    <p style="text-align:center;font-weight:bold;">
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
+    </p>
+
+    <form onsubmit="sendEmail(event)">
+      <input type="text" id="nom" name="nom" placeholder="Nom" required />
+      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
+      <input type="datetime-local" id="dateheure" name="dateheure" required />
+      <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+      <button type="submit">Envoyer la demande</button>
+    </form>
+  </div>
+
   <footer>
-    © 2025 OuassVTC. Tous droits réservés.
+    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
   </footer>
+
+  <div class="hidden-keywords">
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transfert gare Perpignan, aéroport VTC, transport sécurisé, transport Perpignan, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+  </div>
+
+  <script type="text/javascript">
+    (function() {
+      emailjs.init("U08QGWWRUenJDOllc");
+    })();
+
+    function sendEmail(event) {
+      event.preventDefault();
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+        nom: document.getElementById("nom").value,
+        telephone: document.getElementById("telephone").value,
+        date: document.getElementById("dateheure").value,
+        depart: document.getElementById("depart").value,
+        destination: document.getElementById("arrivee").value,
+        remarque: document.getElementById("message").value
+      })
+      .then(function(response) {
+        alert("Votre demande a bien été envoyée !");
+      }, function(error) {
+        console.error("EmailJS error:", error);
+        alert("Erreur lors de l'envoi. Veuillez réessayer.");
+      });
+    }
+  </script>
 </body>
 </html>
+ 
