--- a/index.html
+++ b/index.html
@@ -3,30 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>OuassVTC - Accueil</title>
-  <style>
-    body { margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5; color: #333; }
-    nav { background-color: #000; padding: 15px; text-align: center; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    header, section { padding: 20px; text-align: center; }
-    section { max-width: 800px; margin: auto; }
-    footer { background-color: #000; color: white; text-align: center; padding: 30px 10px; margin-top: 40px; }
-  </style>
-</head>
-<body>
-  <nav>
-    <a href="index.html">Accueil</a>
-    <a href="qui-sommes-nous.html">Qui sommes-nous</a>
-    <a href="services.html">Nos services</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <header>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
@@ -43,7 +19,8 @@
       text-align: center;
     }
     header img {
-      height: 120px;
+      height: 140px;
+      max-width: 100%;
     }
     .container {
       padding: 20px;
@@ -52,7 +29,7 @@
     }
     .car-image {
       width: 100%;
-      max-width: 600px;
+      max-width: 450px;
       display: block;
       margin: 0 auto 20px auto;
     }
@@ -67,11 +44,20 @@
       display: flex;
       align-items: center;
       gap: 5px;
-      background-color: #333;
+      background-color: #000;
       color: white;
       padding: 10px 15px;
       border-radius: 5px;
       text-decoration: none;
+    }
+    .buttons a img {
+      width: 20px;
+      height: 20px;
+    }
+    .info {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 20px;
     }
     form {
       display: flex;
@@ -85,6 +71,18 @@
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
+      width: 100%;
+    }
+    .localiser-btn {
+      position: absolute;
+      right: 15px;
+      top: 6px;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .field-container {
+      position: relative;
     }
     button {
       padding: 10px;
@@ -94,6 +92,12 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
+    }
+    .estimation {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 10px;
+      color: green;
     }
     footer {
       background-color: #000;
@@ -105,70 +109,223 @@
     .hidden-keywords {
       display: none;
     }
+    @media (max-width: 600px) {
+      .buttons {
+        flex-direction: column;
+        align-items: center;
+      }
+      .buttons a {
+        width: 80%;
+        justify-content: center;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
     <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
-
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-
-    <div class="buttons">
-      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/24/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/24/whatsapp.png"/> WhatsApp</a>
-      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/24/sms.png"/> SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/24/facebook-new.png"/> Facebook</a>
-      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/24/snapchat.png"/> Snapchat</a>
+    <div class="info">
+      <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
+      <p>
+        OuassVTC vous propose un service de transport privé à Perpignan et ses environs. Nos chauffeurs professionnels, expérimentés et discrets sont à votre disposition 7j/7 pour assurer tous vos déplacements dans les meilleures conditions de ponctualité, de sécurité et de confort.
+      </p>
+      <p>
+        Que ce soit pour un trajet personnel, professionnel, ou pour vos transferts vers la gare ou l’aéroport, nous mettons un point d’honneur à vous offrir une prestation fiable, rapide et de qualité.
+      </p>
+      <p>
+        Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.
+      </p>
     </div>
 
-    <p style="text-align:center;font-weight:bold;">
-      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
-    </p>
+    <div class="info">
+      <div style="max-width: 400px; margin: 40px auto; font-weight: bold; font-size: 18px;">
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span>
+          <span>rganiser vos trajets</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span>
+          <span>tile pour tous vos déplacements</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span>
+          <span>gile et ponctuel</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
+          <span>écurité garantie</span>
+        </div>
+        <div style="display: flex; align-items: baseline;">
+          <span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span>
+          <span>ervice de qualité</span>
+        </div>
+      </div>
 
-    <form onsubmit="sendEmail(event)">
-      <input type="text" id="nom" name="nom" placeholder="Nom" required />
-      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-      <button type="submit">Envoyer la demande</button>
-    </form>
+      <div class="buttons">
+        <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
+        <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+        <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
+        <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
+        <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
+      </div>
+
+      <div class="info">
+        <h2>Formulaire de réservation</h2>
+        <p>Tarif fixe à l'avance – pas de surprise !</p>
+      </div>
+
+      <form onsubmit="sendEmail(event)">
+        <input type="text" id="nom" name="nom" placeholder="Nom" required />
+        <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
+        <div class="field-container">
+          <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+          <button type="button" class="localiser-btn" onclick="localiserDepart()">
+            <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
+          </button>
+        </div>
+        <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+        <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
+        <input type="datetime-local" id="dateheure" name="dateheure" required />
+        <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+        <div class="estimation" id="prixEstime"></div>
+        <button type="submit">Envoyer la demande</button>
+      </form>
+
+      <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+    </div>
   </div>
 
   <footer>
     © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
+    <br/><br/>
+    Pour toute demande : <a href="mailto:contact@ouassvtc.fr" style="color:#0af;">contact@ouassvtc.fr</a>
   </footer>
 
   <div class="hidden-keywords">
-    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transfert gare Perpignan, aéroport VTC, transport sécurisé, transport Perpignan, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
   </div>
 
-  <script type="text/javascript">
-    (function() {
-      emailjs.init("U08QGWWRUenJDOllc");
-    })();
+  <script>
+    emailjs.init("U08QGWWRUenJDOllc");
 
     function sendEmail(event) {
       event.preventDefault();
+      const submitButton = document.querySelector("form button[type='submit']");
+      submitButton.disabled = true;
+      submitButton.innerText = "Envoi en cours...";
+
+      const nom = document.getElementById("nom").value;
+      const telephone = document.getElementById("telephone").value;
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      const dateheure = document.getElementById("dateheure").value;
+      const passagers = document.getElementById("passagers").value;
+      const message = document.getElementById("message").value;
+      const prixText = document.getElementById("prixEstime").innerText;
+
       emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-        nom: document.getElementById("nom").value,
-        telephone: document.getElementById("telephone").value,
-        date: document.getElementById("dateheure").value,
-        depart: document.getElementById("depart").value,
-        destination: document.getElementById("arrivee").value,
-        remarque: document.getElementById("message").value
-      })
-      .then(function(response) {
-        alert("Votre demande a bien été envoyée !");
-      }, function(error) {
-        console.error("EmailJS error:", error);
+        nom, telephone, depart, arrivee, dateheure, passagers, message, prix: prixText
+      }).then(() => {
+        const form = document.querySelector("form");
+        form.style.display = "none";
+
+        const confirmation = document.createElement("div");
+        confirmation.style.textAlign = "center";
+        confirmation.style.marginTop = "20px";
+        confirmation.style.fontWeight = "bold";
+        confirmation.style.color = "green";
+        confirmation.style.opacity = 0;
+        confirmation.style.transition = "opacity 0.8s ease-in-out";
+        confirmation.innerText = "✅ Merci ! Votre demande a bien été envoyée. Nous vous contacterons rapidement.";
+
+        const resetBtn = document.createElement("button");
+        resetBtn.innerText = "Faire une nouvelle demande";
+        resetBtn.style.marginTop = "20px";
+        resetBtn.style.padding = "10px 20px";
+        resetBtn.style.border = "none";
+        resetBtn.style.borderRadius = "5px";
+        resetBtn.style.backgroundColor = "#28a745";
+        resetBtn.style.color = "white";
+        resetBtn.style.cursor = "pointer";
+        resetBtn.onclick = () => {
+          form.reset();
+          document.getElementById("prixEstime").innerText = "";
+          form.style.display = "flex";
+          confirmation.remove();
+          resetBtn.remove();
+          submitButton.disabled = false;
+          submitButton.innerText = "Envoyer la demande";
+        };
+
+        document.querySelector(".container").appendChild(confirmation);
+        document.querySelector(".container").appendChild(resetBtn);
+
+        setTimeout(() => { confirmation.style.opacity = 1; }, 100);
+      }).catch(() => {
+        submitButton.disabled = false;
+        submitButton.innerText = "Envoyer la demande";
         alert("Erreur lors de l'envoi. Veuillez réessayer.");
       });
     }
+
+    function localiserDepart() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(position => {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+          fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
+            .then(res => res.json())
+            .then(data => {
+              document.getElementById("depart").value = data.display_name || "";
+              calculerEstimation();
+            });
+        });
+      } else {
+        alert("La géolocalisation n'est pas supportée par votre navigateur.");
+      }
+    }
+
+    function calculerEstimation() {
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      if (depart && arrivee) {
+        fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(depart)}&format=json&limit=1`)
+          .then(res => res.json())
+          .then(data1 => {
+            if (!data1.length) throw "Adresse de départ non trouvée";
+            const start = `${data1[0].lon},${data1[0].lat}`;
+            return fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(arrivee)}&format=json&limit=1`)
+              .then(res => res.json())
+              .then(data2 => {
+                if (!data2.length) throw "Adresse d'arrivée non trouvée";
+                const end = `${data2[0].lon},${data2[0].lat}`;
+                return fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
+                  .then(res => res.json())
+                  .then(route => {
+                    const distKm = route.routes[0].distance / 1000;
+                    let prix = 20;
+                    if (distKm > 7) prix += (distKm - 7) * 1.6;
+                    document.getElementById("prixEstime").innerText =
+                      `Distance estimée : ${distKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+                  });
+              });
+          })
+          .catch(() => {
+            document.getElementById("prixEstime").innerText = "Estimation indisponible.";
+          });
+      }
+    }
+
+    document.getElementById("depart").addEventListener("blur", calculerEstimation);
+    document.getElementById("arrivee").addEventListener("blur", calculerEstimation);
+
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+    }
   </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
- 
