--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
   <header>
     <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
+  <nav style="background-color:#000; padding:15px; text-align:center;">
+  <a href="index.html" style="color:white; margin:0 10px; text-decoration:none;">Accueil</a>
+  <a href="qui-sommes-nous.html" style="color:white; margin:0 10px; text-decoration:none;">Qui sommes-nous</a>
+  <a href="services.html" style="color:white; margin:0 10px; text-decoration:none;">Services</a>
+  <a href="faq.html" style="color:white; margin:0 10px; text-decoration:none;">FAQ</a>
+  <a href="contact.html" style="color:white; margin:0 10px; text-decoration:none;">Contact</a>
+</nav>
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
     <div class="info">
