--- a/faq.html
+++ b/faq.html
@@ -58,5 +58,11 @@
       <p>Nous desservons Perpignan et sa région : Canet, Argelès, Le Barcarès, Narbonne, aéroports et gares régionales.</p>
     </div>
   </div>
+  <div style="text-align:center; margin-top: 40px;">
+  <a href="index.html" style="display:inline-block; padding:10px 20px; background-color:#007bff; color:white; border-radius:5px; text-decoration:none; font-weight:bold;">
+    ⬅️ Retour à l'accueil
+  </a>
+</div>
+
 </body>
 </html>
