--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -44,5 +44,11 @@
       Réserver avec OuassVTC, c’est faire le choix d’un chauffeur à l’écoute, expérimenté, et toujours prêt à répondre à vos besoins.
     </p>
   </div>
+  <div style="text-align:center; margin-top: 40px;">
+  <a href="index.html" style="display:inline-block; padding:10px 20px; background-color:#007bff; color:white; border-radius:5px; text-decoration:none; font-weight:bold;">
+    ⬅️ Retour à l'accueil
+  </a>
+</div>
+
 </body>
 </html>
