--- a/services.html
+++ b/services.html
@@ -47,5 +47,11 @@
     <h2>💳 Paiement simplifié</h2>
     <p>Paiement en espèces, carte bancaire ou mobile. Tarifs fixés à l’avance, pas de surprise.</p>
   </div>
+  <div style="text-align:center; margin-top: 40px;">
+  <a href="index.html" style="display:inline-block; padding:10px 20px; background-color:#007bff; color:white; border-radius:5px; text-decoration:none; font-weight:bold;">
+    ⬅️ Retour à l'accueil
+  </a>
+</div>
+
 </body>
 </html>
