--- a/contact.html
+++ b/contact.html
@@ -39,5 +39,11 @@
     <p><strong>Disponibilité :</strong> 7j/7 – Sur réservation</p>
     <p>Vous pouvez également utiliser notre formulaire de réservation sur la page d’accueil pour toute demande personnalisée.</p>
   </div>
+  <div style="text-align:center; margin-top: 40px;">
+  <a href="index.html" style="display:inline-block; padding:10px 20px; background-color:#007bff; color:white; border-radius:5px; text-decoration:none; font-weight:bold;">
+    ⬅️ Retour à l'accueil
+  </a>
+</div>
+
 </body>
 </html>
