--- a/index.html
+++ b/index.html
@@ -332,6 +332,6 @@
   <a href="services.html">Services</a>
   <a href="faq.html">FAQ</a>
   <a href="contact.html">Contact</a>
-</div>
+</div
 </body>
 </html>
