--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
     }
   </style>
 </head>
+  .bottom-menu {
+  max-width: 100%;
+  padding: 30px 20px;
+  margin-top: 60px;
+  border-top: 1px solid #ddd;
+  background-color: #f9f9f9;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 16px;
+  box-sizing: border-box;
+}
+
+.bottom-menu a {
+  color: #444;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 10px 14px;
+  border-radius: 6px;
+  transition: color 0.3s ease;
+  white-space: nowrap;
+}
+
+.bottom-menu a:hover {
+  color: #007bff;
+}
 <body>
   <header>
     <img src="ouassvtc.png" alt="Logo OuassVTC" />
