--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </button>
         </div>
         <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-        <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
+        <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" max="4" />
         <input type="datetime-local" id="dateheure" name="dateheure" required />
         <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
         <div class="estimation" id="prixEstime"></div>
