--- a/index.html
+++ b/index.html
@@ -198,7 +198,12 @@
       <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
     </div>
   </div>
-
+<div class="bottom-menu">
+  <a href="qui-sommes-nous.html">Qui sommes-nous</a>
+  <a href="services.html">Services</a>
+  <a href="faq.html">FAQ</a>
+  <a href="contact.html">Contact</a>
+</div>
   <footer>
     © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
     <br/><br/>
