--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
         <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
         <div class="field-container">
           <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-          <button type="button" class="localiser-btn" onclick="localiserDepart()">
-            <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
+          <button type="button" class="localiser-texte-btn" onclick="localiserDepart()">Me localiser</button>
           </button>
         </div>
         <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
