--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <form onsubmit="sendEmail(event)">
         <input type="text" id="nom" name="nom" placeholder="Nom" required />
         <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-        <<div class="field-container-horizontal">
+        <div class="field-container-horizontal">
   <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
   <button type="button" class="localiser-side-btn" onclick="localiserDepart()">Me localiser</button>
         </div>
